// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List #render() should not modify mods 1`] = `
<ul
  className="ui-list ui-list_test ui-list_align_vertical"
>
  <li
    className="ui-list__item"
    key="0"
  >
    London
  </li>
  <li
    className="ui-list__item"
    key="1"
  >
    Amsterdam
  </li>
  <li
    className="ui-list__item"
    key="2"
  >
    Madrid
  </li>
</ul>
`;

exports[`List #render() should not render empty items if an appropriate prop is false 1`] = `
<ul
  className="ui-list ui-list_align_vertical"
>
  <li
    className="ui-list__item"
    key="0"
  >
    London
  </li>
  <li
    className="ui-list__item"
    key="1"
  >
    Madrid
  </li>
</ul>
`;

exports[`List #render() should return base class with mods for strings as class and string as mods 1`] = `
<ul
  className="ui-list ui-list_align_vertical"
>
  <li
    className="ui-list__item"
    key="0"
  >
    London
  </li>
  <li
    className="ui-list__item"
    key="1"
  >
    Amsterdam
  </li>
  <li
    className="ui-list__item"
    key="2"
  >
    Madrid
  </li>
</ul>
`;

exports[`List #render() should return base class with mods for strings as class and string as mods 2`] = `
<ul
  className="ui-list ui-list_align_horizontal"
>
  <li
    className="ui-list__item"
    key="0"
  >
    London
  </li>
  <li
    className="ui-list__item"
    key="1"
  >
    Amsterdam
  </li>
  <li
    className="ui-list__item"
    key="2"
  >
    Madrid
  </li>
</ul>
`;

exports[`List #render() should return base class with mods for strings as class and string as mods 3`] = `
<ul
  className="ui-list ui-list_align_vertical ui-list_no-bullets"
>
  <li
    className="ui-list__item"
    key="0"
  >
    London
  </li>
  <li
    className="ui-list__item"
    key="1"
  >
    Amsterdam
  </li>
  <li
    className="ui-list__item"
    key="2"
  >
    Madrid
  </li>
</ul>
`;
